SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EBizCharge_Captured_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Captured_Amount__c</fullName>
    <label>EBizCharge Captured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>