SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EBizCharge_IsLockedForFlow__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_IsLockedForFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizCharge IsLockedForFlow</label>
    <type>Checkbox</type>
</CustomField>