SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EBizCharge_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Last_Sync_Date__c</fullName>
    <label>EBizCharge Last Sync Date</label>
    <type>DateTime</type>
</CustomField>