SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EbizCharge_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Quote_Amount__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EbizCharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>