SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EBizCharge_Quote_Balance__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Quote_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EBizCharge Quote Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>