SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EBizCharge_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Quote_Status__c</fullName>
    <label>EBizCharge Quote Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>