SFQBD/Ebiz/force-app/main/default/objects/Quote/fields/EBizCharge_Quote_Tax_c__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Quote_Tax_c__c</fullName>
    <label>EBizCharge Quote Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>